# context-forge

./: .env.example  .gitignore  README.md  STRATEGY.md  pyproject.toml
assets/: manifest.webmanifest
bench/: README.md  __init__.py  benchmark.py  make_sample.py  sweep.py
bench/datasets/: sample_suite.json
contextforge/: __init__.py  adapters.py  budget.py  calibrate.py  cli.py  compiler.py  compress.py  env.py  profiles.py  proxy.py  reorder.py  rot.py  salience.py  server.py  textutil.py  tokens.py  types.py
contextforge/web/: index.html
docs/use-cases/: openclaw.md  openhands.md  support-agent.md
examples/: openclaw_proxy.py  openhands_demo.py  sample_trace.json  support_agent_demo.py
profiles/: profiles.json  stub_measurements.json
tests/: test_compiler.py  test_proxy_calibrate.py
